samples/_failures_safe/1761556737_0e8f73_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_87055928.c: In function ‘main’:
./samples/SAFE/__tmp_87055928.c:162:23: error: expected ‘)’ at end of input
  162 |         if (token.type
      |            ~          ^
      |                       )
./samples/SAFE/__tmp_87055928.c:162:9: error: expected declaration or statement at end of input
  162 |         if (token.type
      |         ^~
./samples/SAFE/__tmp_87055928.c:162:9: error: expected declaration or statement at end of input
